# gpt

./: .pre-commit-config.yaml  CHANGELOG.md  HACKING.md  INSTALL.md  Makefile.am  NEWS.md  README.en.md  README.md  configure.ac
.github/workflows/: build-on-push.yml  build.yml  pre-commit.yml  release.yml  unit-test.yml
doc/: Makefile.am
doc/man/: gpt.1
doc/man/pt_BR/: gpt.1
doc/manual/: manual.tex
exemplos/: Makefile.am  fizzbuzz.gpt  invertervetor.gpt
lib/: base.gpt
src/: GPT.cpp  GPT.hpp  Makefile.am  main.cpp
src/modules/: GPTDisplay.cpp  GPTDisplay.hpp  Makefile.am  PortugolAST.cpp  PortugolAST.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
src/modules/c_translator/: Makefile.am  Portugol2CTranslator.cpp  Portugol2CTranslator.hpp  Portugol2CWalker.g  pt2c.g
src/modules/interpreter/: Interpreter.cpp  Interpreter.hpp  InterpreterDBG.cpp  InterpreterDBG.hpp  InterpreterEval.cpp  InterpreterEval.hpp  InterpreterWalker.g  Makefile.am  interpreter.g
src/modules/parser/: Antlr3Adapter.hpp  BasePortugolParser.cpp  BasePortugolParser.hpp  Makefile.am  MismatchedUnicodeCharException.cpp  MismatchedUnicodeCharException.hpp  Portugol.g  Portugol.g4  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  SemanticEval.cpp  SemanticEval.hpp  SemanticWalker.g  SemanticWalkerTokenTypes.hpp  UnicodeCharBuffer.hpp  UnicodeCharScanner.hpp  accent.sh  lexer.g  parser.g  semantic.g
src/modules/x86/: Makefile.am  X86.cpp  X86.hpp  X86Generator.cpp  X86Generator.hpp  X86Walker.g  asm_elf.h  asm_lib.h  asm_prologue.h  asm_win32.h  x86.g
stuff/: highlight.gpt  iso2utf.sh  svn2cl.php
test/: cli_debugger.c  error_tester.php  feed_test  run_test.sh  tester.gpt
test/asm/: bin.asm  test.asm
test/asm/win32/: header.asm  nagoa+.inc  teste.asm
